# libRenderModel

./: CMakeLists.txt  LICENSE  Model.cpp  Model.h  ModelRenderer.cpp  ModelRenderer.h  README.md  Shader.h  main.cpp
shaders/: id.frag  id.vert
